Deleted all HTML and CSS files for dash, forgot\_password, index, profile, register, and reviews features.
Commit message length: 129 characters

--- a/CSS/promotion.css
+++ b/CSS/promotion.css
@@ -269,6 +269,13 @@ h4{
   text-transform: uppercase;
   /* margin-bottom: 10px; */
 }
+.invalid-input {
+  border: 3px solid red;
+}
+
+.valid-input {
+  border: 3px solid green;
+}
 #category{
   padding: 10px;
   margin-bottom: 10px;
