--- a/CSS/events.css
+++ b/CSS/events.css
@@ -269,6 +269,15 @@ h4{
   text-transform: uppercase;
   /* margin-bottom: 10px; */
 }
+.invalid-input {
+  border: 3px solid red;
+}
+
+.valid-input {
+  border: 3px solid green;
+}
+
+
 .btn1 button{
   padding: 4px;
   padding: 10px;
