--- a/CSS/dash.css
+++ b/CSS/dash.css
@@ -76,11 +76,11 @@ button{
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
   .column {
-    width: 100%;
+    width: 1000px;
     display: block;
-    margin-bottom: 10px;
+   
   }
 }
 
@@ -114,7 +114,7 @@ button{
     
  }
  #dash_label{
-    font-size: 40px;
+    font-size: 20px;
     font-weight: bold;
     background-color: whitesmoke;
     color: #1D5D9B;
@@ -662,12 +662,12 @@ input {
 #edit-txt{
   text-align: center;
   margin-bottom: 20px;
-  font-size: 30px;
+  font-size: 20px;
   color: white;
   
 }
 label{
-  font-size: 16px;
+  font-size: 12px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
 }
