--- a/CSS/archives.css
+++ b/CSS/archives.css
@@ -8,6 +8,13 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+.col-sm-9{
+  background-color: white;
+  height: 100%;
+  position: fixed;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
   .material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
