--- a/CSS/dash.css
+++ b/CSS/dash.css
@@ -24,6 +24,7 @@ body{
   Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+
 h2{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 50px;
@@ -46,13 +47,14 @@ p{
 }
 #dash-logo{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 45px;
+    font-size: 35px;
     font-weight: bolder;
     color: #1D5D9B;  
 }
 .sidenav{
     color: black;
-    font-size: 16px;
+    position: fixed;
+    font-size: 14px;
     
 }
 
@@ -73,7 +75,9 @@ h1{
    border-radius: 2%;
    border-color: black;
     box-shadow: 0 2px 5px #fff(0, 0, 0, 0.1);
-    margin: 2%;
+   
+    position: relative;
+    
 
 }
 #search-bar{
@@ -112,6 +116,7 @@ button{
   margin: 15px;
   background-color: whitesmoke;
   color: white;
+  
 }
 .row:after {
   content: "";
@@ -122,6 +127,7 @@ button{
   float: left;
   width: 23%;
   padding: 0;
+  
   
 }
 
@@ -211,7 +217,7 @@ button{
   height: 100%;
   background-color: #032d89;
   color: white;
-  overflow-y: auto;
+  
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
 }
@@ -322,11 +328,25 @@ padding-left: 8px;
   
   
   /* ---------- MAIN ---------- */
-  
+  .col-sm-9{
+    background-color: white;
+    height: 100%;
+    position: fixed;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
   .main-container {
     grid-area: main;
     overflow-y: auto;
     padding: 20px 20px;
+    background-color: white;
+    height: 100%;
+    position: fixed;
+    overflow-x: hidden;
+      grid-area: main;
+      overflow-y: auto;
+      padding: 20px 20px;
+    
   }
   
   .main-title {
