--- a/CSS/events.css
+++ b/CSS/events.css
@@ -63,14 +63,40 @@ font-size: 20px; /* Increased text to enable scrolling */
   .main-container {
     grid-area: main;
     overflow-y: auto;
-    padding: 2px;
+    padding: 20px 20px;
   }
+  .h2, h2 {
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    font-weight: bolder;
+    color: #1D5D9B;
+  }
+  #dash-logo{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 35px;
+    font-weight: bolder;
+    color: #1D5D9B;  
+}
+  h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    font-weight: bolder;
+    color: #1D5D9B;
+}
   .container-fluid{
     border-radius: 2%;
     border-color: black;
      box-shadow: 0 2px 5px #fff(0, 0, 0, 0.1);
      
   } 
+  .col-sm-9{
+    background-color: white;
+    height: 100%;
+    position: fixed;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
   
  
   .main-title > p {
