--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -60,6 +60,12 @@
     padding: 0 30px 0 30px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
   }
+  h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    font-weight: bolder;
+    color: #1D5D9B;
+}
   
   .menu-icon {
     display: none;
@@ -168,6 +174,25 @@ font-size: 20px; /* Increased text to enable scrolling */
 display: none;
 padding-left: 8px;
 }
+p{
+  font-size: 30px;
+  font-weight: bold;
+  background-color: whitesmoke;
+  color: #1D5D9B;
+  margin: 2%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+#dash_label{
+  font-size: 30px;
+  font-weight: bold;
+  background-color: whitesmoke;
+  color: #1D5D9B;
+  margin: 2%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+  
+}
 
 
   .sidebar-responsive {
@@ -190,6 +215,12 @@ padding-left: 8px;
     overflow-y: auto;
     padding: 20px 20px;
   }
+  #dash-logo{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 35px;
+    font-weight: bolder;
+    color: #1D5D9B;  
+}
   
   .main-title {
     display: flex;
