--- a/CSS/tourist.css
+++ b/CSS/tourist.css
@@ -73,10 +73,11 @@
   height: 100%;
   background-color: #032d89;
   color: white;
-  overflow-y: auto;
+  position: fixed;
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
 }
+
 
 .sidebar-title {
   display: flex;
@@ -120,44 +121,12 @@ list-style: none;
 padding: 10px 20px 10px 10px;
 display: none;
 }
-/*.dropdown-container{
-color: #e6e8ed;
-padding-top: 10px;
-margin-top: 20px;
+#dash-logo{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;  
 }
-.dropdown-container .con-lic, .dropdown-container .con-mv{
-padding: 20px 15px 0px 20px;
-margin-top: -20px;
-}
-.dropdown-container a{
-  text-decoration: none;
-  color: white;
-}
-.sidebar-list-item1 button{
-  padding: 20px 15px 20px 20px;
-  text-decoration: none;
-  font-size: 16px;
-  color: white;
-  display: block;
-  border: none;
-  background: none;
-  width:100%;
-  text-align: left;
-  cursor: default;
-  outline: none;
-}
-
-/* On mouse-over */
-/*.dropdown-btn:hover {
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-lic:hover{
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-mv:hover {
-background-color: rgba(255, 255, 255, 0.2); 
-}
-/* Main content */
 .main {
 margin-left: 200px; /* Same as the width of the sidenav */
 font-size: 20px; /* Increased text to enable scrolling */
@@ -188,7 +157,9 @@ padding-left: 8px;
   .main-container {
     grid-area: main;
     overflow-y: auto;
-    padding: 20px 20px;
+    
+   
+    padding-top: 20px;
   }
   
   .main-title {
