--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -32,7 +32,7 @@
     .text-orange {
       color: #f5b74f;
     }
-  
+
   .font-weight-bold {
     font-weight: 300;
   }
@@ -126,43 +126,7 @@ list-style: none;
 padding: 10px 20px 10px 10px;
 display: none;
 }
-/*.dropdown-container{
-color: #e6e8ed;
-padding-top: 10px;
-margin-top: 20px;
-}
-.dropdown-container .con-lic, .dropdown-container .con-mv{
-padding: 20px 15px 0px 20px;
-margin-top: -20px;
-}
-.dropdown-container a{
-  text-decoration: none;
-  color: white;
-}
-.sidebar-list-item1 button{
-  padding: 20px 15px 20px 20px;
-  text-decoration: none;
-  font-size: 16px;
-  color: white;
-  display: block;
-  border: none;
-  background: none;
-  width:100%;
-  text-align: left;
-  cursor: default;
-  outline: none;
-}
 
-/* On mouse-over */
-/*.dropdown-btn:hover {
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-lic:hover{
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-mv:hover {
-background-color: rgba(255, 255, 255, 0.2); 
-}
 /* Main content */
 .main {
 margin-left: 200px; /* Same as the width of the sidenav */
@@ -174,15 +138,7 @@ font-size: 20px; /* Increased text to enable scrolling */
 display: none;
 padding-left: 8px;
 }
-p{
-  font-size: 30px;
-  font-weight: bold;
-  background-color: whitesmoke;
-  color: #1D5D9B;
-  margin: 2%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
+p
 #dash_label{
   font-size: 30px;
   font-weight: bold;
@@ -215,12 +171,6 @@ p{
     overflow-y: auto;
     padding: 20px 20px;
   }
-  #dash-logo{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 35px;
-    font-weight: bolder;
-    color: #1D5D9B;  
-}
   
   .main-title {
     display: flex;
@@ -673,26 +623,6 @@ label{
   filter: blur(10px);
   user-select: none;
 } */
-
-
-#delete_acc_modal{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-  /* visibility: hidden; */
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-
-}
 .cnfrm_modal{
   width: 550px;
   /* height: 200px; */
@@ -709,6 +639,44 @@ label{
   transition: transform 0.4s, top 0.4s;
   display: none;
 }
+.btn button{
+	padding: 4px;
+	width: 100px; 
+  outline: none;
+	padding: 10px;
+  margin: 10px;
+  text-transform: uppercase;
+  font-size: 12px;
+  margin-top: 20px;
+  cursor: pointer;
+  background-color: var(--blueButton);
+  color:white;
+}
+#delete_acc_modal{
+  width: 550px;
+  /* height: 200px; */
+  background-color: white;
+  user-select: none;
+  border: 1px solid #b3b3b3;
+  box-shadow: 5px 5px 5px rgb(70, 69, 69);
+  color: black;
+  padding: 20px;
+display: none;
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+}
+#confirm_delete{
+  margin-left: 60%;
+}
+/* Add this CSS block to your existing CSS file */
+
+/* Style for the delete account modal */
+
+
 .cnfrm_modal h1, #delete_acc_modal h1{
   letter-spacing: 3px;
   text-align: center;
