--- a/CSS/events.css
+++ b/CSS/events.css
@@ -29,77 +29,56 @@
     margin-bottom: 10px;
   }
 }
-/* Month header */
 .month {
-  padding: 1px;
-  width: 90%;
+  text-align: center;
+  padding: 20px;
   background: #1D5D9B;
-  text-align: center;
+  color: white;
 }
-.calendar{
-  text-align: center;
-}
-
-/* Month list */
 .month ul {
   margin: 0;
-
   padding: 0;
+  list-style-type: none;
 }
-
 .month ul li {
-  color: white;
-  font-size: 12px;
+  font-size: 20px;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
 }
-
-/* Previous button inside month header */
-.month .prev, .month .next {
-  float: none;
-  display: inline;
-  padding-top: 0;
+.month .prev,
+.month .next {
+  cursor: pointer;
 }
-
-/* Weekdays (Mon-Sun) */
 .weekdays {
-  width: 90%;
-  padding: 5px;
+  margin: 0;
+  padding: 10px 0;
   background-color: #ddd;
 }
-
 .weekdays li {
   display: inline-block;
-  width: 13%;
+  width: 10%;
   color: #666;
   text-align: center;
-  font-size: 12px;
 }
-
-/* Days (1-31) */
 .days {
-  padding: 1px ;
+  padding: 10px 0;
   background: #eee;
-  width: 90%;
+  margin: 0;
 }
-
 .days li {
   list-style-type: none;
   display: inline-block;
-  width: 13%;
+  width: 10%;
   text-align: center;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
   font-size: 12px;
   color: #777;
 }
-
-/* Highlight the "current" day */
-.days li .active {
+.days li.active {
   padding: 5px;
   background: #F4D160;
   color: white !important;
 }
-
   
   
   /* ---------- HEADER ---------- */
