--- a/CSS/index.css
+++ b/CSS/index.css
@@ -95,3 +95,11 @@ h1 {
     color: #F4D160;
     font-size: 30px;
 }
+#vigan{
+    font-size: 14px;
+    color: white;
+}
+#forgotPass{
+    font-size: 14px;
+    color: white;
+}
