--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,5 +1,3 @@
-
-
 *
 {
     margin: 0;
@@ -46,9 +44,34 @@
       "sidebar main main main";
     height: 100vh;
   }
+
+  
   
   
   /* ---------- HEADER ---------- */
+
+
+  .row.content {
+    height: 400px
+}
+
+.sidenav {
+    background-color: white;
+    height: 100%;
+}
+
+@media screen and (max-width: 100px) {
+    .row.content {
+        height: auto;
+    }
+}
+
+.disabled-button {
+    background-color: #d3d3d3;
+    border: 1px solid #c0c0c0;
+    cursor: not-allowed;
+    color: #888888;
+}
   
   .header {
     grid-area: header;
@@ -436,6 +459,23 @@ label{
   display: none;
 
 }
+
+/* popup modal to view password */
+.confpass-container{
+  background-color: #1D5D9B;
+  width: 500px;
+  border-radius: 15px;
+  padding: 10px;
+  margin: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+  border-radius: 10px;
+  display: none;
+
+}
 .container-modal-edit{
   background-color: #1D5D9B;
 }
@@ -474,12 +514,33 @@ input {
   font-size: 14px;
   
 }
+#position{
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  background-color: white;
+  box-sizing: border-box;
+  border-radius: 10px;
+  font-size: 14px;
+}
+
+#positionEdit{
+
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  background-color: white;
+  box-sizing: border-box;
+  border-radius: 10px;
+  font-size: 14px;
+
+}
 
 #input{
   display: block;
  
 }
-#btnEdit{
+#btnSaveEdit{
   width: 100px;
   height: 30px;
   display: block;
@@ -703,4 +764,15 @@ display: none;
 }
 .btn{
     display: flex;
+}
+
+.disabled-button {
+  background-color: #ddd;
+  color: #aaa;
+  cursor: not-allowed;
+}
+.enabled-button {
+  background-color: #007bff;
+  color: black;
+  cursor: pointer;
 }
