--- a/CSS/dash.css
+++ b/CSS/dash.css
@@ -21,6 +21,7 @@
   padding: 15px;
   text-decoration: none;
   font-size: 14px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #1D5D9B;
   display: block;
   border: none;
@@ -30,6 +31,19 @@
   cursor: pointer;
   outline: none;
 }
+.container-fluid{
+  font-size: 14px;
+  
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
+.container-fluid:hover{
+  font-size: 18px;
+  
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
+
 
 .dropdown-btn:hover {
   background-color: rgba(255, 255, 255, 0.2);
@@ -59,14 +73,7 @@
   padding: 20px 20px;
 }
 
-.main-title {
-  display: flex;
-  justify-content: space-between;
-}
 
-.main-title > p {
-  font-size: 20px;
-}
 
 table tr {
   padding: 4px;
@@ -94,39 +101,22 @@ th, tr, td {
   display: flex;
 }
 
-.outer-wrapper {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  overflow-x: auto;
-  overflow-y: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.table-wrapper {
-  width: 100%;
-  overflow-y: auto;
-  margin-bottom: 20px;
-}
-
 .con-lic, .con-mv {
   padding: 5px 10px;
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #1D5D9B;
+  
 }
 
 .con-lic:hover, .con-mv:hover {
-  background-color: #1D5D9B;
-  color: white;
+  background-color: gainsboro;
+  color: #1D5D9B;
 }
 
 .dropdown-container.show {
   display: block;
 }
-
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -192,15 +182,7 @@ h1{
     text-align: center;
 }
 
-.container-fluid{
-   border-radius: 2%;
-   border-color: black;
-    box-shadow: 0 2px 5px #fff(0, 0, 0, 0.1);
-   
-    position: relative;
-    
 
-}
 #search-bar{
     text-align: center;
     width: 250px;
