--- a/CSS/events.css
+++ b/CSS/events.css
@@ -20,7 +20,8 @@
 .sidebar-list-item1 button {
   padding: 15px;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #1D5D9B;
   display: block;
   border: none;
@@ -29,6 +30,11 @@
   text-align: left;
   cursor: pointer;
   outline: none;
+}
+.container-fluid{
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
 }
 
 .dropdown-btn:hover {
@@ -41,7 +47,7 @@
 
 .main {
   margin-left: 200px;
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .dropdown-container {
@@ -59,14 +65,7 @@
   padding: 20px 20px;
 }
 
-.main-title {
-  display: flex;
-  justify-content: space-between;
-}
 
-.main-title > p {
-  font-size: 20px;
-}
 
 table tr {
   padding: 4px;
@@ -94,40 +93,22 @@ th, tr, td {
   display: flex;
 }
 
-.outer-wrapper {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  overflow-x: auto;
-  overflow-y: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.table-wrapper {
-  width: 100%;
-  overflow-y: auto;
-  margin-bottom: 20px;
-}
-
 .con-lic, .con-mv {
   padding: 5px 10px;
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #1D5D9B;
+  
 }
 
 .con-lic:hover, .con-mv:hover {
-  background-color: #1D5D9B;
-  color: white;
+  background-color: gainsboro;
+  color: #1D5D9B;
 }
 
 .dropdown-container.show {
   display: block;
 }
-
-
   .material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
@@ -230,7 +211,7 @@ th, tr, td {
 /* Main content */
 .main {
 margin-left: 200px; /* Same as the width of the sidenav */
-font-size: 20px; /* Increased text to enable scrolling */
+font-size: 14px; /* Increased text to enable scrolling */
 /* padding: 0px 10px; */
 }
 
