--- a/CSS/industries.css
+++ b/CSS/industries.css
@@ -96,8 +96,8 @@ th, tr, td {
 }
 
 .con-lic:hover, .con-mv:hover {
-  background-color: #1D5D9B;
-  color: white;
+  background-color: gainsboro;
+  color: #1D5D9B;
 }
 
 .dropdown-container.show {
