--- a/CSS/prArchives.css
+++ b/CSS/prArchives.css
@@ -1,191 +1,131 @@
-* {
-    box-sizing: border-box;
-  }
-  .dropdown {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown li {
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    color: #333;
-  }
-  
-  .dropdown li:hover {
-    background-color: #f1f1f1;
-  }
-  
-  .active:hover .dropdown {
-    display: block;
-  }
-  
-  body {
-    font-family: Arial;
-    margin: 0 auto; /* Center website */
-    max-width: 800px; /* Max width */
-    padding: 20px;
-    background-color: #1D5D9B;
-  }
-  
-  .heading {
 
-    *
-    {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-    }
-      .material-icons-outlined {
-        vertical-align: middle;
-        line-height: 1px;
-      }
-      #dash-logo{
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size: 35px;
-        font-weight: bolder;
-        color: #1D5D9B;  
-    }
-      
-      .header {
-        grid-area: header;
-        height: 70px;
-        background-color: #ffffff;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 30px 0 30px;
-        box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
-      }
-      
-      .menu-icon {
-        display: none;
-      }
-      
-      
-     /* ---------- SIDEBAR ---------- */
-      
-     #sidebar {
-      grid-area: sidebar;
-      height: 100%;
-      background-color: #032d89;
-      color: white;
-      overflow-y: auto;
-      transition: all 0.5s;
-      -webkit-transition: all 0.5s;
-    }
-    
-    .sidebar-title {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 15px 0px 25px;
-      margin-bottom: 30px;
-    }
-    
-    .sidebar-title > span {
-      display: none;
-    }
-    
-    .sidebar-brand {
-      margin-top: 15px;
-      font-size: 20px;
-      font-weight: 700;
-    }
-    
-    .sidebar-list {
-      padding: 0;
-      margin-top: 15px;
-      list-style-type: none;
-    }
-    
-    .sidebar-list-item {
-      padding: 20px 15px 20px 20px;
-    }
-    
-    .sidebar-list-item:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      cursor: pointer;
-    }
-    
-    .sidebar-list > a {
-      text-decoration: none;
-      color: white;
-    }
-    #sidebar ul ul li {    
-    list-style: none;
-    padding: 10px 20px 10px 10px;
-    display: none;
-    }
-    /*.dropdown-container{
-    color: #e6e8ed;
-    padding-top: 10px;
-    margin-top: 20px;
-    }
-    .dropdown-container .con-lic, .dropdown-container .con-mv{
-    padding: 20px 15px 0px 20px;
-    margin-top: -20px;
-    }
-    .dropdown-container a{
-      text-decoration: none;
-      color: white;
-    }
-    .sidebar-list-item1 button{
-      padding: 20px 15px 20px 20px;
-      text-decoration: none;
-      font-size: 16px;
-      color: white;
-      display: block;
-      border: none;
-      background: none;
-      width:100%;
-      text-align: left;
-      cursor: default;
-      outline: none;
-    }
-    
-    /* On mouse-over */
-    /*.dropdown-btn:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    }
-    .con-lic:hover{
-    background-color: rgba(255, 255, 255, 0.2);
-    }
-    .con-mv:hover {
-    background-color: rgba(255, 255, 255, 0.2); 
-    }
-    /* Main content */
-    .main {
-    margin-left: 200px; /* Same as the width of the sidenav */
-    font-size: 20px; /* Increased text to enable scrolling */
-    /* padding: 0px 10px; */
-    }
-    /* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-    .dropdown-container {
-    display: none;
-    padding-left: 8px;
-    }
-    
-    
-      .sidebar-responsive {
-        display: inline !important;
-        position: absolute;
-        /*
-          the z-index of the ApexCharts is 11
-          we want the z-index of the sidebar higher so that
-          the charts are not showing over the sidebar 
-          on small screens
-        */
-        z-index: 12 !important;
-      }
-      
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.dropdown-container {
+  color: #1D5D9B;
+ 
+  display: none;
+}
+
+.dropdown-container a {
+  text-decoration: none;
+  color: #1D5D9B;
+}
+
+.sidebar-list-item1 button {
+  padding: 15px;
+  text-decoration: none;
+  font-size: 14px;
+  color: #1D5D9B;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+
+.dropdown-btn:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.con-lic:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.main {
+  margin-left: 200px;
+  font-size: 20px;
+}
+
+.dropdown-container {
+  padding-left: 8px;
+}
+
+.sidebar-responsive {
+  display: inline !important;
+  position: absolute;
+  z-index: 12 !important;
+}
+
+.main-container {
+  overflow-y: auto;
+  padding: 20px 20px;
+}
+
+.main-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-title > p {
+  font-size: 20px;
+}
+
+table tr {
+  padding: 4px;
+}
+
+th, tr, td {
+  padding: 7px;
+  text-align: left;
+}
+
+.btn_useracc button {
+  border: none;
+  padding: 5px;
+  margin: 5px;
+  width: 100px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: rgb(223, 217, 217);
+  cursor: pointer;
+}
+
+.btn_useracc {
+  display: flex;
+}
+
+.outer-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow-x: auto;
+  overflow-y: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.table-wrapper {
+  width: 100%;
+  overflow-y: auto;
+  margin-bottom: 20px;
+}
+
+.con-lic, .con-mv {
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #1D5D9B;
+}
+
+.con-lic:hover, .con-mv:hover {
+  background-color: gainsboro;
+  color: #1D5D9B;
+}
+
+.dropdown-container.show {
+  display: block;
+}
       
       /* ---------- MAIN ---------- */
       
