--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -117,12 +117,10 @@ th, tr, td {
   text-decoration: none;
   color: #1D5D9B;
 }
-
 .con-lic:hover, .con-mv:hover {
-  background-color: #1D5D9B;
-  color: white;
+  background-color: gainsboro;
+  color: #1D5D9B;
 }
-
 .dropdown-container.show {
   display: block;
 }
