--- a/CSS/restaurants.css
+++ b/CSS/restaurants.css
@@ -96,10 +96,9 @@ th, tr, td {
 }
 
 .con-lic:hover, .con-mv:hover {
-  background-color: #1D5D9B;
-  color: white;
+  background-color: gainsboro;
+  color: #1D5D9B;
 }
-
 .dropdown-container.show {
   display: block;
 }
