--- a/CSS/sArchives.css
+++ b/CSS/sArchives.css
@@ -77,6 +77,27 @@
   padding: 20px 15px 0px 25px;
   margin-bottom: 30px;
 }
+.icon-spacing {
+  margin-right: 10px; /* Adjust the value as needed */
+}
+
+.dropdown-btn {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-btn i {
+  margin-right: 5px; /* Space between the star icon and the text */
+}
+
+.con-lic {
+  display: flex;
+  align-items: center;
+}
+
+.con-lic i {
+  margin-right: 10px; /* Space between the icons and the text */
+}
 
 .sidebar-title > span {
   display: none;
