--- a/CSS/tourist.css
+++ b/CSS/tourist.css
@@ -101,6 +101,30 @@ th, tr, td {
 .dropdown-container.show {
   display: block;
 }
+.icon-spacing {
+  margin-right: 10px; /* Adjust the value as needed */
+}
+
+.dropdown-btn {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-btn i {
+  margin-right: 5px; /* Space between the star icon and the text */
+}
+
+.con-lic {
+  display: flex;
+  align-items: center;
+}
+
+.con-lic i {
+  margin-right: 10px; /* Space between the icons and the text */
+}
+input[type="text"], input[type="date"], textarea {
+  text-transform: uppercase;
+}
 
   .material-icons-outlined {
     vertical-align: middle;
