--- a/CSS/dishes.css
+++ b/CSS/dishes.css
@@ -94,6 +94,28 @@ th, tr, td {
   text-decoration: none;
   
 }
+.icon-spacing {
+  margin-right: 10px; /* Adjust the value as needed */
+}
+
+.dropdown-btn {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-btn i {
+  margin-right: 5px; /* Space between the star icon and the text */
+}
+
+.con-lic {
+  display: flex;
+  align-items: center;
+}
+
+.con-lic i {
+  margin-right: 10px; /* Space between the icons and the text */
+}
+
 
 .con-lic:hover, .con-mv:hover {
   background-color: gainsboro;
