--- a/CSS/industries.css
+++ b/CSS/industries.css
@@ -99,6 +99,28 @@ th, tr, td {
   background-color: gainsboro;
   color: #1D5D9B;
 }
+.icon-spacing {
+  margin-right: 10px; /* Adjust the value as needed */
+}
+
+.dropdown-btn {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-btn i {
+  margin-right: 5px; /* Space between the star icon and the text */
+}
+
+.con-lic {
+  display: flex;
+  align-items: center;
+}
+
+.con-lic i {
+  margin-right: 10px; /* Space between the icons and the text */
+}
+
 
 .dropdown-container.show {
   display: block;
