--- a/CSS/promotion.css
+++ b/CSS/promotion.css
@@ -98,6 +98,31 @@ th, tr, td {
   background-color: gainsboro;
   color: #1D5D9B;
 }
+.icon-spacing {
+  margin-right: 10px; /* Adjust the value as needed */
+}
+
+.dropdown-btn {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-btn i {
+  margin-right: 5px; /* Space between the star icon and the text */
+}
+
+.con-lic {
+  display: flex;
+  align-items: center;
+}
+
+.con-lic i {
+  margin-right: 10px; /* Space between the icons and the text */
+}
+
+input[type="text"], input[type="date"], textarea {
+  text-transform: uppercase;
+}
 
 .dropdown-container.show {
   display: block;
