--- a/CSS/reviews.css
+++ b/CSS/reviews.css
@@ -126,6 +126,27 @@ th, tr, td {
 .dropdown-container.show {
   display: block;
 }
+.icon-spacing {
+  margin-right: 10px; /* Adjust the value as needed */
+}
+
+.dropdown-btn {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-btn i {
+  margin-right: 5px; /* Space between the star icon and the text */
+}
+
+.con-lic {
+  display: flex;
+  align-items: center;
+}
+
+.con-lic i {
+  margin-right: 10px; /* Space between the icons and the text */
+}
 
 
   .material-icons-outlined {
