--- a/CSS/events.css
+++ b/CSS/events.css
@@ -832,3 +832,9 @@ label{
 input[type="text"], input[type="date"], textarea {
   text-transform: uppercase;
 }
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
