--- a/CSS/industries.css
+++ b/CSS/industries.css
@@ -102,7 +102,12 @@ th, tr, td {
 .icon-spacing {
   margin-right: 10px; /* Adjust the value as needed */
 }
-
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
 .dropdown-btn {
   display: flex;
   align-items: center;
