--- a/CSS/prArchives.css
+++ b/CSS/prArchives.css
@@ -832,7 +832,12 @@ label{
 #cnl_promo3{
   margin-left: 300px;
 }
-
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
 .btn_promo3 button{
 	padding: 4px;
 	width: 100px; 
