--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -31,6 +31,12 @@
   outline: none;
 }
 
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
 .dropdown-btn:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
