--- a/CSS/rArchives.css
+++ b/CSS/rArchives.css
@@ -94,6 +94,11 @@ th, tr, td {
   text-decoration: none;
   
 }
+
+.con-lic:hover, .con-mv:hover {
+  background-color: gainsboro;
+  color: #1D5D9B;
+}
 .icon-spacing {
   margin-right: 10px; /* Adjust the value as needed */
 }
@@ -106,25 +111,145 @@ th, tr, td {
 .dropdown-btn i {
   margin-right: 5px; /* Space between the star icon and the text */
 }
-
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
 .con-lic {
   display: flex;
   align-items: center;
+}
+input[type="text"], input[type="date"], textarea {
+  text-transform: uppercase;
 }
 
 .con-lic i {
   margin-right: 10px; /* Space between the icons and the text */
 }
 
-.con-lic:hover, .con-mv:hover {
-  background-color: #1D5D9B;
-  color: white;
-}
-
 .dropdown-container.show {
   display: block;
 }
+  .material-icons-outlined {
+    vertical-align: middle;
+    line-height: 1px;
+  }
+  
+  #dash-logo{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 35px;
+    font-weight: bolder;
+    color: #1D5D9B;  
+}
+  .header {
+    grid-area: header;
+    height: 70px;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30px 0 30px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+  }
+  
+  .menu-icon {
+    display: none;
+  }
+  
+  
+ /* ---------- SIDEBAR ---------- */
+  
+ #sidebar {
+  grid-area: sidebar;
+  height: 100%;
+  background-color: #032d89;
+  color: white;
+  overflow-y: auto;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+}
 
+.sidebar-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 15px 0px 25px;
+  margin-bottom: 30px;
+}
+
+.sidebar-title > span {
+  display: none;
+}
+
+.sidebar-brand {
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.sidebar-list {
+  padding: 0;
+  margin-top: 15px;
+  list-style-type: none;
+}
+
+.sidebar-list-item {
+  padding: 20px 15px 20px 20px;
+}
+
+.sidebar-list-item:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+}
+
+.sidebar-list > a {
+  text-decoration: none;
+  color: white;
+}
+#sidebar ul ul li {    
+list-style: none;
+padding: 10px 20px 10px 10px;
+display: none;
+}
+/*.dropdown-container{
+color: #e6e8ed;
+padding-top: 10px;
+margin-top: 20px;
+}
+.dropdown-container .con-lic, .dropdown-container .con-mv{
+padding: 20px 15px 0px 20px;
+margin-top: -20px;
+}
+.dropdown-container a{
+  text-decoration: none;
+  color: white;
+}
+.sidebar-list-item1 button{
+  padding: 20px 15px 20px 20px;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
+  display: block;
+  border: none;
+  background: none;
+  width:100%;
+  text-align: left;
+  cursor: default;
+  outline: none;
+}
+
+/* On mouse-over */
+/*.dropdown-btn:hover {
+background-color: rgba(255, 255, 255, 0.2);
+}
+.con-lic:hover{
+background-color: rgba(255, 255, 255, 0.2);
+}
+.con-mv:hover {
+background-color: rgba(255, 255, 255, 0.2); 
+}
 /* Main content */
 .main {
 margin-left: 200px; /* Same as the width of the sidenav */
