--- a/CSS/rev_hotel.css
+++ b/CSS/rev_hotel.css
@@ -110,7 +110,12 @@ th, tr, td {
 .dropdown-btn i {
   margin-right: 5px; /* Space between the star icon and the text */
 }
-
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
 .con-lic {
   display: flex;
   align-items: center;
