--- a/CSS/rev_souvenir.css
+++ b/CSS/rev_souvenir.css
@@ -881,7 +881,12 @@
   #cnl3{
     margin-left: 300px;
   }
-  
+  #dash-logo {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 35px;
+    font-weight: bolder;
+    color: #1D5D9B;}
+    
   .btn button{
       padding: 4px;
       width: 150px; 
