--- a/CSS/souvenir.css
+++ b/CSS/souvenir.css
@@ -119,6 +119,12 @@ th, tr, td {
 input[type="text"], input[type="date"], textarea {
   text-transform: uppercase;
 }
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
 .con-lic i {
   margin-right: 10px; /* Space between the icons and the text */
 }
