--- a/CSS/tourist.css
+++ b/CSS/tourist.css
@@ -125,7 +125,12 @@ th, tr, td {
 input[type="text"], input[type="date"], textarea {
   text-transform: uppercase;
 }
-
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
   .material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
