--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -31,12 +31,6 @@
   outline: none;
 }
 
-#dash-logo {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 35px;
-  font-weight: bolder;
-  color: #1D5D9B;}
-  
 .dropdown-btn:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
@@ -131,27 +125,6 @@ th, tr, td {
   display: block;
 }
 
-.icon-spacing {
-  margin-right: 10px; /* Adjust the value as needed */
-}
-
-.dropdown-btn {
-  display: flex;
-  align-items: center;
-}
-
-.dropdown-btn i {
-  margin-right: 5px; /* Space between the star icon and the text */
-}
-
-.con-lic {
-  display: flex;
-  align-items: center;
-}
-
-.con-lic i {
-  margin-right: 10px; /* Space between the icons and the text */
-}
 
   .material-icons-outlined {
     vertical-align: middle;
@@ -831,7 +804,23 @@ label{
   filter: blur(10px);
   user-select: none;
 } */
-.cnfrm_modal{
+.cnfrm_modal_delete{
+  width: 550px;
+  /* height: 200px; */
+  background-color: white;
+  user-select: none;
+  border: 1px solid #b3b3b3;
+  box-shadow: 5px 5px 5px rgb(70, 69, 69);
+  color: black;
+  padding: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+  display: none;
+}
+#delete_acc_modal{
   width: 550px;
   /* height: 200px; */
   background-color: white;
