--- a/CSS/tourist.css
+++ b/CSS/tourist.css
@@ -131,6 +131,12 @@ input[type="text"], input[type="date"], textarea {
   font-weight: bolder;
   color: #1D5D9B;}
   
+  #tbody1{
+    overflow-y: auto;
+    height: 300px;
+ margin: 2%;
+ text-align: center;
+  }
   .material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
@@ -429,37 +435,29 @@ h4{
     }
   }
   
-
-  @media only screen and (max-width: 1200px){
+  @media only screen and (max-width: 1200px) {
     body {
-      overflow-y: hidden; /* Hide vertical scrollbar */
-      overflow-x: hidden; /* Hide horizontal scrollbar */
+      overflow:scroll
     }
+  
     .outer-wrapper {
-      margin: 10px;
-      margin-left: -1px;
-      margin-right: 30px;
+      margin: 5px;
       width: 100%;
       max-width: fit-content;
-      max-height: fit-content;
-    
-      
+      text-align: center;
     }
+  
     .table-wrapper {
-    
-      overflow-y: scroll;
-      overflow-x: scroll;
-      height: fit-content;
+      overflow: scroll;
       max-height: 66.4vh;
       margin-top: 22px;
-      margin: 15px;
       padding-bottom: 20px;
-      
+      text-align: center;
     }
-    .content-table{
-      max-width: 200%;
-
-    
+  
+    .content-table {
+      max-width: 300%;
+    }
   }
  
   /* Extra Small <= 576px */
@@ -468,7 +466,7 @@ h4{
       display: none;
     }
   }
-}
+
 
 
 /* popup modal for create account */
