--- a/CSS/registration.css
+++ b/CSS/registration.css
@@ -1,26 +1,23 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    padding: 0;
+    margin: 10;
+    padding: 10;
     background-color: white;
     display: flex;
-    margin-bottom: 100px;
     justify-content: center;
     align-items: center;
     height: 80vh;
 }
 
-.login-container {
-    width: 400px;
+.reg-container {
+    width: 450px;
     border-radius: 10px;
-    padding: 15px;
-    margin: 15px;
-    height: 500px;
+    padding: 10px;
     background-color: #24146C; 
     text-align: center;
 }
 
-.login-container form {
+.reg-container form {
     padding: 0 35px;
 }
 
@@ -62,18 +59,13 @@ input {
     font-size: 14px;
     border: 1px solid #CCC;
 }
-p{
-    color: white;
-}
-a{
-    color: yellow;
-}
 
-button, #btnLogin, #logout-btn {
+button, #btnLogin, #register-button, #logout-btn {
     width: 100px;
     height: 30px;
+    margin: 10px auto; 
+    padding: 5px 10px;
     background-color: #F3F709;
-   
     color: #000000;
     border: none;
     border-radius: 15px;
@@ -84,10 +76,10 @@ button, #btnLogin, #logout-btn {
 }
 
 #register {
-    color: white;
+    background-color: #F3F709;
     width: 100%;
     height: 60px;
-    display: flex; /* Add this line */
+    display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
