--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,11 +1,66 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #24146C;
+  font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.sidenav h2, .sidenav a {
+  color: white;
+}
+
+.nav-pills > li > a {
+  color: #24146C;
+}
+
+.nav-pills > li.active > a, 
+.nav-pills > li.active > a:focus, 
+.nav-pills > li.active > a:hover {
+  background-color: #24146C;
+  color: white;
+}
+
+.card {
+  background-color: #f1f1f1;
+  border: 1px solid #24146C;
+}
+
+.card h4, .card p {
+  color: #24146C;
+}
+
+.well {
+  background-color: #24146C;
+  color: white;
+}
+
+.dropdown-container {
+  color: #24146C;
+ 
+  display: none;
+}
+
+.dropdown-container a {
+  text-decoration: none;
+  color: #24146C;
+}
+
+.sidebar-list-item1 button {
+  padding: 15px;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #24146C;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
 .dropdown-container {
   color: #1D5D9B;
  
